# tableau_langchain_mcp

./: Makefile  README.md  main.py  main_Orig.py  main_strava.py  metadata.py  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt  setup.py  simple_datasource_qa_utils.py  simple_test.py  test_server.py  tools--.py  tools-.py  tools.py
Old/: handle.py  main.py  start.sh  tools.py
pkg/: auth.py  simple_datasource_qa.py
tableau_langchain_mcp/: init_py.py  server.py
utils/: auth.py  metadata.py  simple_datasource_qa.py
